--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Fabian Gwinner # Website name
-baseURL: 'https://github.com/fabigr8' # Website URL 
+baseURL: 'https://fabigr8.github.io/' # Website URL 
 
 ############################
 ## LANGUAGE
